# JASMINE

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: api.md  changelog.rst  conf.py  contributing.rst  examples.md  examples.rst  faq.rst  index.rst  installation.md  installation.rst  performance.rst  quickstart.md  quickstart.rst  requirements.txt
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: examples.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/.doctrees/api/: classification.doctree  datasets.doctree  index.doctree  metrics.doctree  preprocessing.doctree  regression.doctree  selection.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/jasmine/classification/: logistic_regression.html
docs/_build/html/_sources/: examples.rst.txt  installation.rst.txt
docs/_build/html/_sources/api/: datasets.rst.txt  metrics.rst.txt  preprocessing.rst.txt
docs/_build/html/api/: classification.html  datasets.html  index.html  metrics.html  preprocessing.html  regression.html  selection.html
docs/_static/: .gitkeep
docs/api/: classification.rst  index.rst  linear_model.rst  metrics.rst  model_selection.rst  neighbors.rst  preprocessing.rst  regression.rst  selection.rst  svm.rst
examples/: _knn_classifier.py  _linear_regression.py  _logistic_regression.py  _one_hot_encoder.py  _polynomial_regression.py  _standard_scaler.py  _svm_classifier.py  knn_classifier.py  lasso_regression.py  linear_regression.py  logistic_regression.py  one_hot_encoder.py  polynomial_regression.py  ridge_regression.py  standard_scaler.py  svm_classifier.py
jasmine/: __init__.py  _typing.py
jasmine/callbacks/logging/: __init__.py  _logger.py
jasmine/callbacks/training/: __init__.py  _base.py  _early_stopping.py  _scheduler.py
jasmine/classification/: __init__.py  knn_classifier.py  logistic_regression.py  svm_classifier.py
jasmine/cluster/: __init__.py
jasmine/cluster/centroid/: __init__.py  _kmeans.py
jasmine/cluster/density/: __init__.py  _dbscan.py
jasmine/datasets/: __init__.py  _generators.py  generators.py
jasmine/decomposition/: __init__.py  _lda.py
jasmine/decomposition/linear/: __init__.py  _base.py  _pca.py  _svd.py
jasmine/ensemble/: __init__.py
jasmine/ensemble/bagging/: __init__.py  _random_forest.py
jasmine/ensemble/boosting/: __init__.py  _gradient_boosting.py
jasmine/linear_model/: __init__.py  _base.py  _elastic_net.py  _lasso.py  _linear.py  _logistic.py  _ridge.py  base.py  lasso.py  linear.py  linear_regression.py  logistic.py  logistic_regression.py  ridge.py
jasmine/losses/: __init__.py  _classification.py  _regression.py
jasmine/metrics/: __init__.py  _classification.py  _regression.py  loss.py
jasmine/model_selection/: __init__.py  _split.py  split.py
jasmine/neighbors/: __init__.py  _knn.py
jasmine/nn/: __init__.py  _mlp.py  _sequential.py
jasmine/nn/activations/: __init__.py  _functions.py
jasmine/nn/layers/: __init__.py  _base.py  _dense.py  _dropout.py  _flatten.py
jasmine/optim/: __init__.py  _adam.py  _base.py  _momentum.py  _sgd.py
jasmine/pipeline/: __init__.py  _pipeline.py
jasmine/preprocessing/: __init__.py  _encoder.py  _scaler.py  one_hot_encoder.py  scaler.py
jasmine/regression/: __init__.py  linear_regression.py
jasmine/selection/: __init__.py  split.py
jasmine/svm/: __init__.py  _svm.py  svm_classifier.py
jasmine/tree/: __init__.py  _decision_tree.py
jasmine/tree/criteria/: __init__.py  _base.py  _classification.py  _regression.py
jasmine/utils/: __init__.py  _validation.py
tests/: conftest.py  gradient_check.py  linear_regression.ipynb  logistic_regression.py  new_lr_test.py  simple_test.py  test_linear_regression.py  test_loss.py  test_package.py  test_regression.py  test_split.py
tests/integration/: test_training_smoke.py
tests/unit/: test_api_structure.py  test_linear_model_base.py  test_typing.py  test_utils_validation.py
tests/unit/test_linear_model/: test_base.py  test_elastic_net.py
tests/unit/test_losses/: test_classification.py  test_regression.py
tests/unit/test_optim/: test_adam.py  test_base.py  test_integration.py  test_momentum.py  test_sgd.py
tests/unit/test_preprocessing/: test_scaler.py
tests/unit/test_tree/: test_decision_tree.py
(+6 files in other folders)
