[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasmine"
version = "0.1.0"
description = "JASMINE (JAX Accelerated Statistical Models and Integrated Neural Engine) - A lightweight, high-performance machine learning library built on JAX with GPU/TPU acceleration support for scalable ML workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Jaseem Paloth", email = "jaseem@jaseempaloth.com" }
]
keywords = [
  "machine learning",
  "jax",
  "neural networks",
  "linear regression",
  "logistic regression",
  "gpu acceleration"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "jax>=0.4.0",
  "jaxlib>=0.4.0"
]

[dependency-groups]
dev = [
  "pytest>=6.0",
  "black>=22.0",
  "flake8>=4.0",
  "mypy>=1.9",
  "pre-commit>=3.0",
]
docs = [
  "sphinx>=4.0",
  "sphinx-rtd-theme>=1.0",
  "sphinx-autodoc-typehints>=1.12",
  "myst-parser>=0.17",
  "numpy>=1.20.0",
]
examples = [
  "matplotlib>=3.3.0",
  "scikit-learn>=1.0.0",
  "jupyter>=1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/jaseempaloth/JASMINE/issues"
"Documentation" = "https://jasmine.readthedocs.io"
"Source Code" = "https://github.com/jaseempaloth/JASMINE"
"Homepage" = "https://jasmine.readthedocs.io"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["jasmine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "docs", ".git", "__pycache__"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_return_any = false
follow_imports = "skip"
files = ["jasmine"]
